Fix: add special characters